Bug 381520 - nsIAlertsService doesn't fail on Mac if Growl isn't running.  r=mano